# data-structures-and-algorithms

./: CMakeLists.txt  README.md  contest10_A.cpp  contest10_B.cpp  contest10_C.cpp  contest10_D1.cpp  contest10_D1_2.cpp  contest10_D1_3.cpp  contest10_D1_4.cpp  contest10_E1.cpp  contest10_E1_1.cpp  contest11_A.cpp  contest11_B.cpp  contest11_C.cpp  contest12_B.cpp  contest12_C.cpp  contest12_D.cpp  contest12_E.cpp  contest12_F.cpp  contest12_G.cpp  contest6.cpp  contest7.cpp  contest8.cpp  contest9.cpp  contest9_1.cpp  contest9_3.cpp  contest9_4.cpp  contest9_5.cpp  contest9_BPlusTree.cpp  contest9_BTree.cpp  contest9_SplayTree.cpp  contest_algo_10_A.cpp  contest_algo_10_B.cpp  contest_algo_10_C.cpp  contest_algo_11_A.cpp  contest_algo_11_B.cpp  contest_algo_11_C.cpp  contest_algo_11_D.cpp  contest_algo_11_E.cpp  contest_algo_11_F.cpp  (+69 more)
contest_algo_15/A/: main.cpp
contest_algo_15/B/: main.cpp
contest_algo_15/C/: main.cpp
contest_algo_15/D/: main.cpp  алгоритм.txt
contest_algo_15/E/: main.cpp
contest_algo_16/A/: main.cpp
contest_algo_16/B/: main.cpp
contest_algo_16/C/: main.cpp
contest_algo_16/D/: main.cpp
contest_algo_16/E/: main.cpp
contest_algo_17/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
contest_algo_18/: A.cpp  B.cpp  C.cpp  D.cpp
contest_algo_6_F/: participant_solution.cpp
tmp/: main.cpp
